# RuVector

./: Cargo.toml
.github/workflows/: hailo-backend-audit.yml
crates/ruvector-cli/: Cargo.toml
crates/ruvector-cli/src/: main.rs
crates/ruvector-cli/src/cli/: mod.rs
crates/ruvector-fresh-diskann/: Cargo.toml
crates/ruvector-fresh-diskann/src/: lib.rs  main.rs
crates/ruvector-hailo/: Cargo.toml  deny.toml
crates/ruvector-hailo-cluster/: Cargo.toml  deny.toml
crates/ruvector-hailo-cluster/deploy/: 99-radar-ruvector.rules  compile-encoder-hef.py  compile-hef.sh  cross-build-bridges.sh  export-minilm-encoder-onnx.py  install-bridge.sh  install-ruview-csi-bridge.sh  install-ruvllm-bridge.sh  install.sh  ruvector-hailo-worker.service  ruvector-hailo.env.example  ruvector-mmwave-bridge.env.example  ruvector-mmwave-bridge.service  ruview-csi-bridge.env.example  ruview-csi-bridge.service
crates/ruvector-hailo-cluster/examples/: hailo-cluster-as-provider.rs
crates/ruvector-hailo-cluster/proto/: embedding.proto
crates/ruvector-hailo-cluster/src/: discovery.rs  error.rs  grpc_transport.rs  lib.rs  manifest_sig.rs  proto.rs  rate_limit.rs  tls.rs  transport.rs
crates/ruvector-hailo-cluster/tests/: dos_gates.rs  mtls_roundtrip.rs  secure_stack_composition.rs  stats_cli.rs
crates/ruvector-hailo/src/: cpu_embedder.rs  csi_embedder.rs  device.rs  error.rs  hef_embedder.rs  hef_pipeline.rs  host_embeddings.rs  inference.rs  lib.rs  tokenizer.rs
crates/ruvector-hailo/tests/: cpu_fallback_integration.rs
crates/ruvector-mmwave/: Cargo.toml
crates/ruvector-mmwave/src/: lib.rs
crates/ruvector-symphony-qg/: Cargo.toml
crates/ruvector-symphony-qg/benches/: symphony_bench.rs
crates/ruvector-symphony-qg/src/: codes.rs  error.rs  graph.rs  index.rs  lib.rs  main.rs  rotation.rs  search.rs
crates/ruview-cluster-sdk/: Cargo.toml  build.rs
crates/ruview-cluster-sdk/proto/: vitals.proto
crates/ruview-cluster-sdk/src/: client.rs  cluster.rs  error.rs  lib.rs
crates/ruview-ruvllm-h10/deploy/: env.example
crates/ruview-ruvllm-h10/src/: main.rs
crates/ruview-ruvllm-router/: Cargo.toml  build.rs
crates/ruview-ruvllm-router/deploy/: env.example  ruview-ruvllm-router.service
crates/ruview-ruvllm-router/proto/: llm.proto
crates/ruview-ruvllm-router/src/: main.rs  pool.rs
crates/ruview-vitals-worker/: Cargo.toml
crates/ruview-vitals-worker/deploy/: cluster-smoke-test.sh  install-ruview-vitals-worker.sh  push-to-cluster.sh  ruview-mcp-brain-mini.service  ruview-vitals-worker.env.example  ruview-vitals-worker.service
crates/ruview-vitals-worker/src/: brain.rs  config.rs  lib.rs  mcp_brain.rs  pipeline.rs  sona.rs  state.rs
crates/ruview-vitals-worker/tests/: brain_http.rs
docs/adr/: ADR-167-ruvector-hailo-npu-embedding-backend.md  ADR-168-ruvector-hailo-cluster-cli-surface.md  ADR-171-ruos-brain-ruview-pi5-edge-node.md  ADR-172-ruvector-hailo-security-review.md  ADR-173-ruvllm-hailo-edge-llm.md  ADR-174-ruos-thermal-overclock-pi5.md  ADR-175-hailo-rust-side-workarounds.md  ADR-176-hef-integration-epic.md  ADR-179-symphony-qg.md  ADR-183-fresh-diskann.md  ADR-183-ruview-cluster-integration.md  ADR-184-ruvllm-hailo10h-cluster3-llm-serving.md  ADR-185-ruview-ruvllm-router-multi-h10h.md
docs/research/nightly/2026-05-05-symphony-qg/: README.md
docs/research/nightly/2026-05-06-fresh-diskann/: README.md
examples/esp32-mmwave-sensor/: Cargo.toml  sdkconfig.defaults
examples/esp32-mmwave-sensor/src/: main.rs  parser.rs
