[package]
name = "ruvector-hailo-cluster"
version = "0.1.0"
edition = "2021"
description = "Multi-Pi cluster coordinator for ruvector Hailo embedding workers (ADR-167 §8)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["ruvector", "hailo", "cluster", "embedding", "edge-ai"]
categories = ["network-programming", "embedded"]

[features]
default = []
# `grpc` is reserved for future feature-gating; everything in proto/
# grpc_transport already builds unconditionally.
grpc = []
# `hailo` propagates to ruvector-hailo so the worker binary actually
# talks to /dev/hailo0. Default off so x86 dev hosts can still build.
hailo = ["ruvector-hailo/hailo"]
# `tls` enables rustls-backed TLS on GrpcTransport (client) and the
# worker (server). Mitigates ADR-172 §1a HIGH (cleartext gRPC). Off by
# default — Tailscale already encrypts the wire; opt-in for defense-in-
# depth or non-Tailscale deploys.
tls = ["tonic/tls"]

# Standalone (excluded from parent workspace until cluster crate joins).
[workspace]

[dependencies]
thiserror          = "2"
tonic              = { version = "0.12", default-features = false, features = ["codegen", "prost", "channel", "server"] }
prost              = "0.13"
tokio              = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
# ADR-172 §3b iter-104: per-peer leaky-bucket rate limiter. `dashmap`
# gives a sharded concurrent map keyed by peer identity; `governor`
# implements the bucket per peer. Both are pulled unconditionally — the
# rate limiter is opt-in via env var but the code path always compiles.
dashmap            = "6"
governor           = { version = "0.7", default-features = false, features = ["std", "quanta"] }
# ADR-172 §1c iter-107: optional Ed25519 detached signature verification
# on `--workers-file` manifests. Pure-Rust, no native deps.
ed25519-dalek      = { version = "2", default-features = false, features = ["std"] }
# Iter 115: shared mmWave parser. Same source as the ESP32 firmware
# consumes; the host-side `mmwave-bridge` bin uses it to decode bytes
# off /dev/ttyUSB* or a synthetic simulator stream.
ruvector-mmwave    = { path = "../ruvector-mmwave", features = ["std"] }
tokio-stream       = { version = "0.1", default-features = false, features = ["net"] }
futures-core       = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
sha2               = "0.10"
ruvector-hailo     = { path = "../ruvector-hailo" }

[[bin]]
name = "ruvector-hailo-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "ruvector-hailo-embed"
path = "src/bin/embed.rs"

[[bin]]
name = "ruvector-hailo-fakeworker"
path = "src/bin/fakeworker.rs"

[[bin]]
name = "ruvector-hailo-stats"
path = "src/bin/stats.rs"

[[bin]]
name = "ruvector-hailo-cluster-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "ruvector-mmwave-bridge"
path = "src/bin/mmwave-bridge.rs"

[build-dependencies]
tonic-build         = { version = "0.12", default-features = false, features = ["prost"] }
protoc-bin-vendored = "3"

[dev-dependencies]
anyhow       = "1"
tokio-stream = { version = "0.1", features = ["net"] }
criterion    = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }
# Self-signed cert generation for the TLS roundtrip test. Only used
# under `cargo test --features tls`; pulled regardless because dev-deps
# can't be feature-gated cleanly, but build cost is small (~50KB).
rcgen        = { version = "0.13", default-features = false, features = ["pem", "ring"] }

[[bench]]
name = "dispatch"
harness = false

# Ultra release profile (iter 82 SOTA pass).
#
# Trades compile time for runtime speed:
# - lto = "fat": cross-crate inlining including tonic + prost
# - codegen-units = 1: no parallel codegen → strongest optimisation per unit
# - panic = "abort": no unwinding → smaller code, fewer landingpads
# - strip = "symbols": shrinks binary; not strictly perf, but cuts deploy size
#
# Default `cargo build --release` still uses the fast-compile profile;
# opt in with `cargo build --profile=ultra` when you want the extra ~5-15%.
[profile.ultra]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
