[package]
name = "ruvector-symphony-qg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SymphonyQG: co-located RaBitQ codes + FastScan batch distance estimation on graph-based ANNS (SIGMOD 2025)"

[[bin]]
name = "symphony-demo"
path = "src/main.rs"

[[bench]]
name = "symphony_bench"
harness = false

[dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
